--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <div class="general-container">
     <h1>Registration Form</h1>
     <p class="subtitle">- Please fill out this form with the required information -</p>
 
@@ -64,6 +65,7 @@
         </form>
         <input type="submit" value="Submit" name="" id="">
     </div>
+</div>
 </body>
 
 </html>
