--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 </head>
 
 <body>
+    <div class="my-style"><a href="https://gemdelle.github.io/fCC-RWD-04-RegistrationForm/"></a></div>
+    <div class="fcc-style"><a href="https://gemdelle.github.io/fCC-RWD-04-RegistrationForm/original"></a></div>
+    
     <div class="general-container">
     <h1>Registration Form</h1>
     <p class="subtitle">- Please fill out this form with the required information -</p>
