--- a/original.html
+++ b/original.html
@@ -8,6 +8,9 @@
 </head>
 
 <body>
+    <div class="my-style"><a href="https://gemdelle.github.io/fCC-RWD-04-RegistrationForm/"></a></div>
+    <div class="fcc-style"><a href="https://gemdelle.github.io/fCC-RWD-04-RegistrationForm/original"></a></div>
+
     <h1>Registration Form</h1>
     <p>Please fill out this form with the required information</p>
     <form action="https://register-demo.freecodecamp.org" method="post">
